--- a/replicator-tests/pom.xml
+++ b/replicator-tests/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>replicator-tests</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.18.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>ru.splite.replicator</groupId>
             <artifactId>replicator-api</artifactId>
             <version>DEV-SNAPSHOT</version>
