--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
     <modules>
         <module>raft</module>
         <module>replicator-api</module>
+        <module>replicator-timers</module>
         <module>replicator-tests</module>
         <module>paxos</module>
-        <module>timing</module>
         <module>atlas</module>
     </modules>
     <groupId>ru.splite.replicator</groupId>
