--- a/atlas/pom.xml
+++ b/atlas/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>ru.splite.replicator</groupId>
-            <artifactId>timing</artifactId>
+            <artifactId>replicator-timers</artifactId>
             <version>DEV-SNAPSHOT</version>
         </dependency>
 
