--- a/replicator-timers/pom.xml
+++ b/replicator-timers/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>timing</artifactId>
+    <artifactId>replicator-timers</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
