Базовая реализация демоп-приложения Runner для KV на базе Atlas

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>paxos</module>
         <module>atlas</module>
         <module>transport-grpc</module>
+        <module>replicator-runner</module>
     </modules>
     <groupId>ru.splite.replicator</groupId>
     <version>DEV-SNAPSHOT</version>
