--- a/transport-grpc/pom.xml
+++ b/transport-grpc/pom.xml
@@ -36,8 +36,8 @@
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
-            <artifactId>grpc-netty-shaded</artifactId>
-            <version>1.29.0</version>
+            <artifactId>grpc-netty</artifactId>
+            <version>1.37.0</version>
         </dependency>
     </dependencies>
 
