--- a/replicator-runner/kubernetes/replicator-statefulset.yaml
+++ b/replicator-runner/kubernetes/replicator-statefulset.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: replicator
 spec:
-  replicas: 0
+  replicas: 3
   serviceName: "replicator-grpc-service"
   selector:
     matchLabels:
@@ -15,16 +15,16 @@ spec:
       labels:
         app: replicator
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: app
-                    operator: In
-                    values:
-                      - replicator
-              topologyKey: topology.kubernetes.io/zone
+      #      affinity:
+      #        podAntiAffinity:
+      #          requiredDuringSchedulingIgnoredDuringExecution:
+      #            - labelSelector:
+      #                matchExpressions:
+      #                  - key: app
+      #                    operator: In
+      #                    values:
+      #                      - replicator
+      #              topologyKey: topology.kubernetes.io/zone
       #          preferredDuringSchedulingIgnoredDuringExecution:
       #            - podAffinityTerm:
       #                labelSelector:
@@ -40,26 +40,28 @@ spec:
           image: olgnet/replicator:latest
           imagePullPolicy: Always
           command: [ "java" ]
-          args: [ "-Xmx512M", "-jar", "/app.jar", "--nodes", "replicator-0.replicator-grpc-service.default.svc.cluster.local:6545,replicator-1.replicator-grpc-service.default.svc.cluster.local:6545,replicator-2.replicator-grpc-service.default.svc.cluster.local:6545" ]
+          args: [ "-Xmx1400M", "-jar", "/app.jar", "--protocol", "RAFT", "--nodes", "replicator-0.replicator-grpc-service.default.svc.cluster.local:6545,replicator-1.replicator-grpc-service.default.svc.cluster.local:6545,replicator-2.replicator-grpc-service.default.svc.cluster.local:6545" ]
           ports:
             - containerPort: 8000
             - containerPort: 6545
           resources:
             limits:
-              cpu: 300m
-              memory: "768Mi"
+              cpu: 700m
+              memory: "1536Mi"
             requests:
               cpu: 100m
-              memory: "256Mi"
+              memory: "512Mi"
           livenessProbe:
             httpGet:
               path: /health
               port: 8000
-            initialDelaySeconds: 15
+            initialDelaySeconds: 5
             periodSeconds: 5
+            failureThreshold: 10
           readinessProbe:
             httpGet:
               path: /health
               port: 8000
-            initialDelaySeconds: 15
+            initialDelaySeconds: 5
             periodSeconds: 5
+            failureThreshold: 10
