--- a/raft/pom.xml
+++ b/raft/pom.xml
@@ -19,6 +19,12 @@
 
         <dependency>
             <groupId>ru.splite.replicator</groupId>
+            <artifactId>replicator-transport</artifactId>
+            <version>DEV-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.splite.replicator</groupId>
             <artifactId>replicator-timers</artifactId>
             <version>DEV-SNAPSHOT</version>
         </dependency>
