--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,12 @@ jobs:
       - name: Publish Test Report
         if: ${{ always() }}
         uses: scacap/action-surefire-report@v1
+      - name: Generate JaCoCo Badge
+        id: jacoco
+        uses: cicirello/jacoco-badge-generator@v2.0.1
+        with:
+          jacoco-csv-file: replicator-runner/target/site/jacoco/jacoco.csv
+      - name: Log coverage percentage
+        run: |
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
