--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.google.cloud</groupId>
+                <artifactId>libraries-bom</artifactId>
+                <version>20.0.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>ru.splite.replicator</groupId>
                 <artifactId>replicator-api</artifactId>
                 <version>DEV-SNAPSHOT</version>
