--- a/transport-grpc/pom.xml
+++ b/transport-grpc/pom.xml
@@ -31,6 +31,16 @@
             <artifactId>grpc-kotlin-stub</artifactId>
             <version>${grpc.kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-netty</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport-native-epoll</artifactId>
+            <version>4.1.52.Final</version>
+            <classifier>linux-x86_64</classifier>
+        </dependency>
     </dependencies>
 
     <build>
