--- a/raft/pom.xml
+++ b/raft/pom.xml
@@ -26,7 +26,7 @@
 
         <dependency>
             <groupId>ru.splite.replicator</groupId>
-            <artifactId>replicator-tests</artifactId>
+            <artifactId>replicator-test-utils</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
