--- a/replicator-runner/pom.xml
+++ b/replicator-runner/pom.xml
@@ -54,7 +54,7 @@
         </dependency>
         <dependency>
             <groupId>ru.splite.replicator</groupId>
-            <artifactId>replicator-tests</artifactId>
+            <artifactId>replicator-test-utils</artifactId>
         </dependency>
         <dependency>
             <groupId>ru.splite.replicator</groupId>
