--- a/rocksdb/pom.xml
+++ b/rocksdb/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>ru.splite.replicator</groupId>
-            <artifactId>replicator-tests</artifactId>
+            <artifactId>replicator-test-utils</artifactId>
         </dependency>
 
         <dependency>
