--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
 
         <junit.version>5.6.0</junit.version>
         <assertj.version>3.18.1</assertj.version>
+
+        <jacoco.version>0.8.7</jacoco.version>
     </properties>
 
     <repositories>
@@ -167,7 +169,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
+                <version>${jacoco.version}</version>
                 <executions>
                     <execution>
                         <goals>
