--- a/replicator-runner/kubernetes/replicator-statefulset-persistent.yaml
+++ b/replicator-runner/kubernetes/replicator-statefulset-persistent.yaml
@@ -5,8 +5,9 @@ metadata:
   labels:
     app: replicator
 spec:
-  replicas: 0
+  replicas: 3
   serviceName: "replicator-grpc-service"
+  podManagementPolicy: Parallel
   selector:
     matchLabels:
       app: replicator
@@ -15,61 +16,54 @@ spec:
       labels:
         app: replicator
     spec:
-      #      affinity:
-      #        podAntiAffinity:
-      #          requiredDuringSchedulingIgnoredDuringExecution:
-      #            - labelSelector:
-      #                matchExpressions:
-      #                  - key: app
-      #                    operator: In
-      #                    values:
-      #                      - replicator
-      #              topologyKey: topology.kubernetes.io/zone
-      #          preferredDuringSchedulingIgnoredDuringExecution:
-      #            - podAffinityTerm:
-      #                labelSelector:
-      #                  matchExpressions:
-      #                    - key: app
-      #                      operator: In
-      #                      values:
-      #                        - replicator
-      #                topologyKey: topology.kubernetes.io/zone
-      #              weight: 100
-      volumes:
-        - name: google-cloud-key
-          secret:
-            secretName: replicator-key
+      affinity:
+        podAntiAffinity:
+          #          requiredDuringSchedulingIgnoredDuringExecution:
+          #            - labelSelector:
+          #                matchExpressions:
+          #                  - key: app
+          #                    operator: In
+          #                    values:
+          #                      - replicator
+          #              topologyKey: topology.kubernetes.io/zone
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: app
+                      operator: In
+                      values:
+                        - replicator
+                topologyKey: topology.kubernetes.io/zone
+              weight: 100
       containers:
         - name: replicator
           image: olgnet/replicator:latest
           imagePullPolicy: Always
           command: [ "java" ]
           args: [
-              "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED", "-Dio.netty.tryReflectionSetAccessible=true",
-              "-Xms1024M", "-Xmx1400M", "-jar", "/app.jar",
+              "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+              "-Dio.netty.tryReflectionSetAccessible=true",
+              "-XX:MaxGCPauseMillis=50",
+              "-Xms4536M", "-Xmx5536M", "-jar", "/app.jar",
+              "--maxConcurrentSubmits", "500",
               "--protocol", "ATLAS",
               "--nodes", "replicator-0.replicator-grpc-service.default.svc.cluster.local:6545,replicator-1.replicator-grpc-service.default.svc.cluster.local:6545,replicator-2.replicator-grpc-service.default.svc.cluster.local:6545",
-              "--googleProjectId", "massive-triumph-309118",
               "--rocksDbFile", "/data"
           ]
           ports:
             - containerPort: 8000
             - containerPort: 6545
           volumeMounts:
-            - mountPath: /var/secrets/google
-              name: google-cloud-key
             - mountPath: /data
               name: data
-          env:
-            - name: GOOGLE_APPLICATION_CREDENTIALS
-              value: /var/secrets/google/key.json
           resources:
             limits:
-              cpu: 700m
-              memory: "1536Mi"
+              cpu: 3000m
+              memory: 6Gi
             requests:
-              cpu: 100m
-              memory: "1024Mi"
+              cpu: 3000m
+              memory: 6Gi
           livenessProbe:
             httpGet:
               path: /health
